# moolang

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_59853be006b90e1bf6b4d1eb57332949.html  dir_59853be006b90e1bf6b4d1eb57332949.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_6cd8491d143eb218b70983dbdb3c58bc.js  error_8h_source.html  expression_8h.html  expression_8h.js  expression_8h_source.html  expression__printer_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  macros_8h_source.html  main_8c.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  parser_8h.html  parser_8h.js  parser_8h_source.html  scanner_8h.html  scanner_8h.js  scanner_8h_source.html  source_8h_source.html  statement_8h_source.html  statement__array_8h_source.html  structexpression.html  structexpression.js  structscan.html  (+23 more)
doc/latex/: annotated.tex  expression_8h.tex  files.tex  index.tex  main_8c.tex  parser_8h.tex  refman.tex  scanner_8h.tex  structexpression.tex  structscan.tex  structsource.tex  structstatement.tex  structstatement__array.tex  structsubstring.tex  structtoken.tex  structtoken__array.tex  structvariant.tex  unionvariant_1_1value.tex  variant_8h.tex
include/: moolib.h
include/moolib/: ast.h  scanner.h
src/: ast.h  error_handling.h  macros.h  main.c
src/error/: error.h
src/parser/: ast.c  ast.h  error.c  (+14 more)
(+71 files in other folders)
